# knapsack-problem

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  backtracking-y-podas.ipynb  experimento_algoritmos  make.sh  reentrega_backtracking_y_podas.ipynb  todos-los-experimentos.ipynb
.ipynb_checkpoints/: Como NO mentir cuando mostramos los datos-checkpoint.ipynb  Desde y hasta donde experimentar (aumentar la granularidad)-checkpoint.ipynb  Desde y hasta donde experimentar (expander la más datos)-checkpoint.ipynb  Que hacer cuando tenemos muchas variables-checkpoint.ipynb  ¿puedo comparar peras con manzanas?-checkpoint.ipynb
experiments_results/: backtracking_1.csv  compare_algorithms1.csv  compare_algorithms2.csv  compare_dinamica.csv  compare_exponenciales.csv
experiments_results/compare_algorithms2/: bruteforce.csv
experiments_results/reentrega/: bkp_size_100.csv  compare_algorithms.csv  compare_algorithms2.csv  exponenciales.csv  exponential_bkp_size.csv  items_size1_value1_nEqualsW.csv  todos_MITM.csv  todos_bruteforce.csv  ultimo.csv
jupyter/: Todos_los_algoritmos.ipynb  backtracking-y-podas.ipynb  reentrega_dinamica.ipynb  reentrega_exponenciales.ipynb  todos-los-experimentos.ipynb
src/: Backtracking.cpp  Backtracking.h  Bruteforce.cpp  Bruteforce.h  backtracking.cpp  backtracking.h  bruteforce.cpp  bruteforce.h  dynamic-programming.cpp  dynamic_programming.cpp  dynamic_programming.h  main.cpp  meet_in_the_middle.cpp  meet_in_the_middle.h  utilities.cpp
src/experiments/: backtracking_poda_factibilidad.cpp  backtracking_poda_factibilidad.h  config.h  (+8 more)
(+11 files in other folders)
